--- a/apps/login/templates/register.html
+++ b/apps/login/templates/register.html
@@ -4,6 +4,13 @@
         <title>Login and Registration</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        {% load static %}
+        <link rel="stylesheet" href="{% static "assets/bootstrap/css/bootstrap.min.css" %}">
+        <link rel="stylesheet" href="{% static "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic" %}" >
+        <link rel="stylesheet" href="{% static "assets/fonts/font-awesome.min.css" %}" >
+        <link rel="stylesheet" href="{% static "assets/css/user.css" %}" >
+
     </head>
     <style>
         .box{
@@ -27,9 +34,26 @@
             padding: 0px;
         }
 
+        body {
+            background-color: lightgrey;
+        }
+
     </style>
     <body>
-        
+        <nav class="navbar navbar-default">
+            <div class="container">
+                <div class="col-md-12">
+                    <a class="navbar-brand navbar-link" href="#"> <i class="fa fa-envira"></i> The Beautiful Site to Inspire Conversation</a> 
+                    <div class="col-md-6"></div>
+                    <a class="navbar-brand navbar-link" href="/">Home</a>
+                    <a class="navbar-brand navbar-link" href="/signin">Sign In</a>
+                    
+                    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                </div>
+                <div class="collapse navbar-collapse" id="navcol-1">
+                </div>
+            </div>
+        </nav>
         <div class = "box">
             <h2>Registration</h2>
             
@@ -41,26 +65,11 @@
                 <p>Email:<input type="text" name='email'></p>
                 <p>Password:<input type="text" name='pw'></p>
                 <p>Confirm pw:<input type="text" name='pw_confirm'></p>
-            
                 
                 <input type="submit" value="Register">
             </form>
-
         </div>
-        
-        
-        <div class="box" id="bigger">
-            <h2>Login</h2>
-
-            <form action="/login" method="post">
-                {% csrf_token %} 
-                <p>Email:<input type="text" name='email'></p>
-                <p>Password:<input type="text" name='pw'></p>
-                <button type='submit'>Login</button>
-            </form>
-          
-        </div>
-
+        <p><a href="/signin">Already have an account? Login</a></p>
 
         {% if messages %}
         <ul class="messages">
